# naive-gravity-simulation

./: CMakeLists.txt  README.md  glad.c  main.cpp
include/glad/: glad.h
libs/: glfw3.lib
